<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/PasswordScene"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="3dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/title_pass"
        android:textColor="@color/title_pass"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/title_lang"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/title_lang"
        android:textColor="@color/title_langword"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/title_word"
        android:textColor="@color/title_langword"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/title_lang"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user_translate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/user_translate"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ask_word" />

    <ImageView
        android:id="@+id/red_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/red_circle" />

    <ImageView
        android:id="@+id/ornage_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/red_circle"
        app:srcCompat="@drawable/orange_circle" />

    <ImageView
        android:id="@+id/right_bubbles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="-5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circles" />

    <ImageView
        android:id="@+id/left_bubbles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="90dp"
        android:rotationY="180"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circles" />

    <Button
        android:id="@+id/btn_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:width="100dp"
        android:onClick="onClickCheck"
        android:text="@string/btn_check"
        app:layout_constraintEnd_toEndOf="@+id/user_translate"
        app:layout_constraintTop_toBottomOf="@+id/user_translate" />

    <Button
        android:id="@+id/btn_copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:width="100dp"
        android:onClick="onClickCopy"
        android:text="@android:string/copy"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_pass" />

    <Button
        android:id="@+id/btn_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:width="100dp"
        android:onClick="onClickAnswer"
        android:text="@string/btn_answer"
        app:layout_constraintStart_toStartOf="@+id/user_translate"
        app:layout_constraintTop_toBottomOf="@+id/user_translate" />

    <TextView
        android:id="@+id/ask_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="3dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/ask_word"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/right_answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/right_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium_italic"
        android:text="@string/right_answer"
        android:textColor="@color/transparent"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/user_translate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ask_word" />

    <Button
        android:id="@+id/btn_give"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:onClick="onClickGive"
        android:text="@string/new_word"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_translate" />

    <TextView
        android:id="@+id/infodel"
        android:layout_width="40dp"
        android:layout_height="24dp"
        android:layout_marginBottom="30dp"
        android:hint="DBInf"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/ask_word"
        app:layout_constraintStart_toEndOf="@+id/ask_word" />

    <ImageButton
        android:id="@+id/three_line_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@color/transparent"
        android:onClick="onClickThreeLine"
        android:scaleX="1.2"
        android:scaleY="1.2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/threeline"/>


</androidx.constraintlayout.widget.ConstraintLayout>